[package]
name = "parallelograph"
version = "0.7.0"
authors = ["Mathieu Amiot <amiot.mathieu@gmail.com>"]
description = "GUI Viewer for B0XX/Frame1 controllers; particularly useful for streaming"
edition = "2021"
build = "build.rs"
license = "MIT/Apache-2.0"

[package.metadata.winres]
OriginalFilename = "parallelograph_viewer.exe"
LegalCopyright = "Copyright Mathieu \"@OtaK_\" Amiot © 2021"
ProductName = "Parallelograph Controller Viewer"

[[bin]]
name = "parallelograph_viewer"
path = "src/main.rs"

[dependencies]
# Logging
log = "0.4"
fern = { version = "0.6", features = ["colored"] }

# GUI
conrod_core = "0.76"
conrod_winit = "0.76"
conrod_glium = "0.76"
winit = "0.26"
glium = "0.28"
rusttype = "0.8"

# Other
crossbeam-channel = "0.5"
clap = { version = "3.0", features = ["derive"] }
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
rgb = { version = "0.8", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
backoff = "0.4"
time = { version = "0.3", features = ["formatting"] }

# Input polling backends
gilrs = "0.8"
serialport = "4.0"

# fake_inputs feature
rand = { version = "0.8", optional = true }

# fps feature
fps_counter = { version = "2.0", optional = true }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[features]
default = []
fake_inputs = ["rand"]
fps = ["fps_counter"]
benchmark = ["fake_inputs", "fps"]
win_console = []

[profile.release]
lto = true
codegen-units = 1
