[package]
name = "b0xx-viewer-rs"
version = "0.7.1"
authors = ["Mathieu Amiot <amiot.mathieu@gmail.com>"]
description = "GUI Viewer for B0XX controllers; particularly useful for streaming"
edition = "2024"
build = "build.rs"
license = "MIT/Apache-2.0"

[package.metadata.winres]
OriginalFilename = "b0xx_viewer.exe"
LegalCopyright = "Copyright Mathieu \"@OtaK_\" Amiot © 2025"
ProductName = "B0XX Viewer"

[[bin]]
name = "b0xx_viewer"
path = "src/main.rs"

[dependencies]
serialport = "4.7"
log = "0.4"
conrod_core = "0.76"
conrod_winit = "0.76"
conrod_glium = "0.76"
winit = "0.26"
glium = "0.28"
crossbeam-channel = "0.5"
clap = { version = "4", features = ["derive"] }
lazy_static = "1.5"
rusttype = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "3.12", default-features = false, features = [
    "macros",
] }
toml = { version = "0.8", features = ["preserve_order"] }
rgb = { version = "0.8", features = ["serde"] }
anyhow = "1.0"
thiserror = "2.0"
backoff = "0.4"
fern = { version = "0.7", features = ["colored"] }
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "serde",
] }
rand = { version = "0.8", default-features = false, features = [
    "small_rng",
], optional = true }
fps_counter = { version = "3.0", optional = true }

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[features]
default = []
fake_inputs = ["rand"]
fps = ["fps_counter"]
benchmark = ["fake_inputs", "fps"]
win_console = []

[profile.release]
lto = true
codegen-units = 1
