[package]
name = "conrod_glium"
version = "0.71.0"
authors = ["Mitchell Nordine <mitchell.nordine@gmail.com>"]
keywords = ["ui", "widgets", "gui", "interface", "graphics"]
description = "An easy-to-use, 100% Rust, extensible 2D GUI library."
license = "MIT OR Apache-2.0"
readme = "../../README.md"
repository = "https://github.com/pistondevelopers/conrod.git"
homepage = "https://github.com/pistondevelopers/conrod"
categories = ["gui"]

[lib]
name = "conrod_glium"
path = "./src/lib.rs"

[dependencies]
conrod_core = "0.70"
glium = "0.27"
thiserror = "1.0"
